--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>AluraBooks</title>
 </head>
 
@@ -13,9 +13,15 @@
 
     <header class="cabecalho">
 
-        <span class="cabecalho__menu-hamburguer"></span>
-        <img src="./assets/Logo.svg" alt="Logo da AluraBooks">
-
+        <div class="container">
+            <span class="cabecalho__menu-hamburguer container__imagem"></span>
+            <img src="assets/Logo.svg" alt="Logo da AluraBooks">
+        </div>
+        <div class="container">
+            <a href="#"><img src="assets/Favoritos.svg" alt="icone de favoritos" class="container__imagem"></a>
+            <a href="#"><img src="assets/Compras.svg" alt="icone de compras" class="container__imagem"></a>
+            <a href="#"><img src="assets/Usuário.svg" alt="icone de perfil" class="container__imagem"></a>
+        </div>
     </header>
     <main>
         
