--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/banner.css">
     <title>AluraBooks</title>
 </head>
 
@@ -36,16 +37,23 @@
                     <a href="#" class="lista-menu__link">Design & UX</a>
                 </li>
             </ul>
-            <img src="assets/Logo.svg" alt="Logo da AluraBooks">
+            <img src="assets/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
         </div>
         <div class="container">
-            <a href="#"><img src="assets/Favoritos.svg" alt="icone de favoritos" class="container__imagem"></a>
-            <a href="#"><img src="assets/Compras.svg" alt="icone de compras" class="container__imagem"></a>
-            <a href="#"><img src="assets/Usuário.svg" alt="icone de perfil" class="container__imagem"></a>
+            <a href="#"><img src="assets/Favoritos.svg" alt="icone de favoritos" ></a>
+            <a href="#"><img src="assets/Compras.svg" alt="icone de compras" ></a>
+            <a href="#"><img src="assets/Usuário.svg" alt="icone de perfil" ></a>
         </div>
     </header>
     <main>
         
+        <section class="banner">
+
+            <h2 class="banner__titulo">já sabe por onde começar?</h2>
+            <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+            <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+
+        </section>
 
     </main>
     <footer></footer>
