criando o topico de mais vendidos

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <!-- Slides -->
                 <div class="swiper-slide"><img src="./assets/books/ApacheKafka.svg" alt="Livro sobre apache e spring boot da alura books"></div>
                 <div class="swiper-slide"><img src="./assets/books/Liderança.svg" alt="Livro sobre liderança em design da alura books"></div>
-                <div class="swiper-slide"><img src="./assets/books/Javascript.svg" alt="Livro sobre javascript da alura books"></div>
+                <div class="swiper-slide"><img src="./assets/books/Guia Front-end.svg" alt="Livro sobre javascript da alura books"></div>
                 <div class="swiper-slide"><img src="./assets/books/Nodejs.svg" alt="Livro sobre nodejs da alura books"></div>
-                <div class="swiper-slide"><img src="./assets/books/ReactNative.svg" alt="Livro sobre react native da alura books"></div>
-                <div class="swiper-slide"><img src="./assets/books/Angular.svg" alt="Livro sobre angular da alura books"></div>
+                <div class="swiper-slide"><img src="./assets/books/Gestão2.svg" alt="Livro sobre react native da alura books"></div>
+                <div class="swiper-slide"><img src="./assets/books/Arquitetura.svg" alt="Livro sobre angular da alura books"></div>
 
 
                 </div>
@@ -108,6 +108,103 @@
 
 
             </div>
+
+        </section>
+
+        <section class="carrossel">
+
+            <h2 class="carrossel__titulo">Mais Vendidos</h2>
+
+            <div class="swiper">
+                <!-- Additional required wrapper -->
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+
+                <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="./assets/books/ApacheKafka.svg" alt="Livro sobre apache e spring boot da alura books"></div>
+                <div class="swiper-slide"><img src="./assets/books/Tuning.svg" alt="Livro sobre liderança em design da alura books"></div>
+                <div class="swiper-slide"><img src="./assets/books/Javascript.svg" alt="Livro sobre javascript da alura books"></div>
+                <div class="swiper-slide"><img src="./assets/books/Nodejs.svg" alt="Livro sobre nodejs da alura books"></div>
+                <div class="swiper-slide"><img src="./assets/books/ReactNative.svg" alt="Livro sobre react native da alura books"></div>
+                <div class="swiper-slide"><img src="./assets/books/Angular.svg" alt="Livro sobre angular da alura books"></div>
+
+
+                </div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            
+            </div>
+
+            <div class="card">
+                <!-- 1° linha -->
+                <div class="card__descricao">
+                    <!-- 1° coluna -->
+                    <div class="descricao">
+                        <img src="assets/Estrelinhas.svg" alt="avaliação da autora" class="avaliacao">
+                        <h3 class="descricao__titulo">Autora do Mês</h3>
+                        <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
+                    </div>
+                    <!-- 2° coluna -->
+                    <img src="assets/Perfil-escritora 1.svg" alt="Imagem da autora Agarikov">
+
+                </div>
+
+                <!-- 2° linha -->
+                <div class="card__botoes">
+                    <!-- 1° coluna -->
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="assets/Favoritos.svg" alt="icone de favoritos"></li>
+                        <li class="botoes__item"><img src="assets/Compras.svg" alt="icone de compras"></li>
+                    </ul>
+                    <!-- 2° coluna -->
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
+
+
+        </section>
+
+        <section class="topicos">
+            <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+            <ul class="topicos__lista">
+
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">Android</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">Marketing Digital</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">Agile</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">Startups</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">HTML & CSS</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">Python</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">OO</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">Java</a>
+                </li>
+
+            </ul>
+
+
+        </section>
+
+        <section class="contato">
+
+            <h2 class="contato__titulo">Fique por dentro das novidades</h2>
+            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros</p>
+            <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
 
         </section>
 
