--- a/index.html
+++ b/index.html
@@ -209,6 +209,15 @@
         </section>
 
     </main>
+
+    <hr/>
+
+    <footer class="rodape">
+
+        <h2 rodape__titulo>Grupo Alura</h2>
+
+    </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script>
 
