--- a/index.html
+++ b/index.html
@@ -38,9 +38,42 @@
                 </li>
             </ul>
             <img src="assets/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
+
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+            <label for="opcoes-menu">
+                <li class="opcoes__item">Categorias</li>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Programação</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Front-End</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Business</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Design & UX</a>
+                </li>
+            </ul>
+            <li class="opcoes__item">
+                <a href="#" class="opcoes__link">Favoritos</a>
+            </li>
+            <li class="opcoes__item">
+                <a href="#" class="opcoes__link">Minha estante</a>
+            </li>
+
+        </ul>
+
         <div class="container">
-            <a href="#"><img src="assets/Favoritos.svg" alt="icone de favoritos" ></a>
+            <a href="#"><img src="assets/Favoritos.svg" alt="icone de favoritos" class="container__imagem-transparente"></a>
             <a href="#"><img src="assets/Compras.svg" alt="icone de compras" ></a>
             <a href="#"><img src="assets/Usuário.svg" alt="icone de perfil" ></a>
         </div>
@@ -201,9 +234,10 @@
         </section>
 
         <section class="contato">
-
-            <h2 class="contato__titulo">Fique por dentro das novidades</h2>
-            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros</p>
+            <div class="contato__descricao">
+                <h2 class="contato__titulo">Fique por dentro das novidades</h2>
+                <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros</p>
+            </div>
             <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
 
         </section>
@@ -215,6 +249,79 @@
     <footer class="rodape">
 
         <h2 rodape__titulo>Grupo Alura</h2>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação</li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/CasaDoCodigo.svg" alt="logo da casa do código">
+                <a href="" class="lista-rodape__link">Casa do código</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/Caelum.svg" alt="logo da caelum">
+                <a href="" class="lista-rodape__link">Caelum</a>
+            </li>
+        </ul>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação Online</li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/Alura.svg" alt="logo da alura">
+                <a href="" class="lista-rodape__link">Alura</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/AluraEmpresas.svg" alt="logo da alura para empresas">
+                <a href="" class="lista-rodape__link">Alura Para Empresas</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/AluraLATAM.svg" alt="logo da alura latam">
+                <a href="" class="lista-rodape__link">Alura LATAM</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/AluraStart.svg" alt="logo da alura start">
+                <a href="" class="lista-rodape__link">Alura Start</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/MusicDot.svg" alt="logo da music dot">
+                <a href="" class="lista-rodape__link">MusicDot</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/AluraLingua.svg" alt="logo da alura lingua">
+                <a href="" class="lista-rodape__link">Alura Língua</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/PM3.svg" alt="logo da PM3">
+                <a href="" class="lista-rodape__link">PM3</a>
+            </li>
+        </ul>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Comunidade</li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/HipstersTech.svg" alt="logo do HipstersTech">
+                <a href="" class="lista-rodape__link">Hipsters ponto Tech</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/ScubaDev.svg" alt="logo do ScubaDev">
+                <a href="" class="lista-rodape__link">Scuba Dev</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/LayersTech.svg" alt="logo da LayersTech">
+                <a href="" class="lista-rodape__link">Layers ponto Tech</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/LikeABoss.svg" alt="logo da LikeABoss">
+                <a href="" class="lista-rodape__link">Like a Boss</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/CarreiraSemFronteira.svg" alt="logo da CarreiraSemFronteira">
+                <a href="" class="lista-rodape__link">Carreira sem Fronteira</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/HipstersJobs.svg" alt="logo do HipstersJobs">
+                <a href="" class="lista-rodape__link">Hipsters ponto Jobs</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/grupoAlura-icons/GUJ.svg" alt="logo do GUJ">
+                <a href="" class="lista-rodape__link">GUJ</a>
+            </li>
+        </ul>
 
     </footer>
     
